# zero2production

./: Cargo.toml  README.md
.cargo/: config.toml
scripts/: init_db.sh
src/: configuration.rs  main.rs
tests/: health_check.rs
